dark mode fixes

--- a/src/pages/Products/ProductsPage.scss
+++ b/src/pages/Products/ProductsPage.scss
@@ -6,6 +6,10 @@
 
   &__title {
     margin-top: 10px;
+
+    &-dark {
+      color: #ffffff;
+    }
   }
 
   .col-6,
